--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AI Safety SDU - A student-led organization at the University of Southern Denmark focused on AI Safety research, education, and community building." />
     <meta name="keywords" content="AI Safety, SDU, University of Southern Denmark, AI Research, Machine Learning, AI Ethics" />
