Simplify page title to 'AI Safety SDU'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AI Safety SDU - A student-led organization at the University of Southern Denmark focused on AI Safety research, education, and community building." />
     <meta name="keywords" content="AI Safety, SDU, University of Southern Denmark, AI Research, Machine Learning, AI Ethics" />
-    <title>AI Safety SDU - Building a Safer AI Future</title>
+    <title>AI Safety SDU</title>
   </head>
   <body>
     <div id="root"></div>
