--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AI Safety SDU - A student-led organization at the University of Southern Denmark focused on AI Safety research, education, and community building." />
+    <meta name="description" content="SIRAIS - Student Initiative for AI Safety Research at the University of Southern Denmark." />
     <meta name="keywords" content="AI Safety, SDU, University of Southern Denmark, AI Research, Machine Learning, AI Ethics" />
-    <title>AI Safety SDU</title>
+    <title>SIRAIS</title>
   </head>
   <body>
     <div id="root"></div>
